<resources>
    <string name="app_name">\u0020NerdyNumeralChallenge</string>
    <string name="continue_button_text">-></string>
    <string name="back_button_text">zurück</string>
    <string name="forward_button_text">weiter</string>
    <string name="tutorial_solution_button">Lösen</string>
    <string name="ok_string">ok</string>
    <string name="highscore_points">Punkte</string>
    <string name="highscore_rank">Platz</string>
    <string name="highscore_name">Name</string>
    <string name="tutorial_intro_button">Einführung</string>
    <string name="tutorial_from_10_button"><![CDATA[
    B<sub><small>x</small></sub> ZU B<sub><small>10</small></sub>
    ]]></string>
    <string name="tutorial_from_other_button"><![CDATA[B<sub><small>10</small></sub> ZU B<sub><small>x</small></sub>]]> </string>
    <string name="tutorial_tricks_button">Nerdy Tricks</string>
    <string name="start_tutorial_button">Tutorial</string>
    <string name="start_practice_button">Übungsaufgaben</string>
    <string name="start_game_button">Spielmodus</string>
    <string name="start_progress_button">Fortschritt</string>
    <string name="notification_title">NerdyNumeralChallenge</string>
    <string name="notification_message">Schau doch mal wieder bei NNC vorbei!</string>
    <string name="settings_game_textView">Spiel</string>
    <string name="settings_sound_effects">Soundeffekte</string>
    <string name="settings_music">Hintergrundmusik</string>
    <string name="settings_push_notifications">Push-Benachrichtigungen</string>
    <string name="settings_push_activated">aktivieren</string>
    <string name="settings_general">Allgemein</string>
    <string name="settings_user_name">Benutzername</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_legal_notice">Impressum</string>
    <string name="settings_default_user_name">Nerd</string>
    <string name="key_pref_user_name">pref_user_name</string>
    <string name="key_pref_push_notifications">pref_notifications</string>
    <string name="key_pref_background_music">pref_music</string>
    <string name="key_pref_sound_effects">pref_sound_effects</string>
    <string name="game_start">Start!</string>
    <string name="game_highscore">Highscore</string>
    <string name="game_help">Hilfe</string>
    <string name="game_weather">Wie ist das Wetter?</string>
    <string name="location_permission_explanation">"Der Zugriff auf Ortsdaten wird benötigt, um den Hintergrund des Spiels an Ihre lokale Wettersituation anzupassen. Falls keine Verwendung von Ortsdaten erwünscht ist, wird der Default-Hintergrund genutzt.";</string>
    <string name="default_weather_toast">Default-Wetter: Die Sonne scheint!</string>
    <string name="weather_toast_1">Wetter aktualisiert! Gerade\u0020 </string>
    <string name="weather_toast_2">. Der Spielhintergrund wurde angepasst.</string>
    <string name="weather_sunny">scheint die Sonne</string>
    <string name="weather_cloudy">ist es wolkig</string>
    <string name="weather_rainy">regnet es</string>
    <string name="weather_snowy">schneit es</string>
    <string name="weather_default">ist es wolkig</string>
    <string name="game_help_explanation">
        Dem Nerd stellen sich allerlei Hindernisse in den Weg. Gruben müssen übersprungen und weiblichen Wesen ausgewichen werden,
        gleichzeitig gilt es Umrechnungsaufgaben zu lösen.\n\n
        Oben links ist der derzeitige Punktestand zu sehen. Oben rechts wird angezeigt, wie viele Leben der Nerd noch hat.\n
        Wenn oben links eine rote Zahl erscheint, kann eine Aufgabe gelöst werden. In Klammern hinter der roten Zahl ist vermerkt, ob es sich um das Hex- oder Binärsystem handelt. Die Lösungen sind immer im Dezimalsystem gegeben und mit den Nummern 1-4 gekennzeichnet. Der Nerd muss nun das Telefon mit der Nummer der richtigen Lösung anspringen. Gelingt das, werden entsprechend entweder bereits verlorene Leben wieder aufgefüllt oder man erhält einen Punktebonus. Springt man die falsche Lösung an, verliert man ein Leben.\n
        Um zu Springen, tippe auf den Bildschirm.\n
        Wenn der Nerd in Gruben fällt, gibt es keine Rettung mehr und man hat verloren. Beim Zusammenstoß mit weiblichen Wesen ist allerdings noch Rettung möglich! Dem absolut unangenehmen Ereignis - einem Gespräch mit einer Frau - kann der Nerd entkommen! Dazu muss er eine Aufgabe im Binärsystem richtig lösen.
        Falls dies nicht innerhalb einer vorgegebenen Zeit gelingt, ist ein Leben verloren.\n
        Mit Verlust des letzten Lebens endet das Spiel. \n\n
        Und übrigens: Mit Tippen auf den Sonnen-Button, oben rechts über dem Startknopf, passt sich der Hintergrund des Spiels an das aktuelle Wetter an. \n\n
        Los geht’s!\n
</string>
    <string name="wrong_answer_toast_text">Diese Antwort ist leider falsch. Gehen Sie das Tutorial noch einmal genau durch. \n
    Die richtige Antwort wäre:</string>
    <string-array name="numeral_systems">
        <item> Binärsystem </item>
        <item> Trialsystem </item>
        <item> Quaternalsystem </item>
        <item> Pentalsystem </item>
        <item> Hexalsystem </item>
        <item> Heptalsystem </item>
        <item> Oktalsystem </item>
        <item> Nonalsystem </item>
        <item> Dezimalsystem </item>
        <item> Undezimalsystem </item>
        <item> Duodezimalsystem </item>
        <item> Tridezimalsystem </item>
        <item> Quatridezimalsystem </item>
        <item> Pentadezimalsystem </item>
        <item> Hexadezimalsystem </item>
    </string-array>
    <string name="exercise_headline">Wähle ein Zahlensystem</string>
    <string name="exercisetype_choice">Wähle einen Aufgabentyp</string>
    <string name="multiple_choice_button">Multiple Choice</string>
    <string name="wrong_true_button">Wahr/Falsch</string>
    <string name="manual_entry_button">Selbsteingabe</string>
    <string name="wrong_answer_toast">falsch</string>
    <string name="exercice_managed_toast">Geschafft!</string>
    <string name="next_level_toast">Du bist jetzt im nächsten Level!</string>
    <string name="freetext_question_1">Rechnen Sie die im\u0020</string>
    <string name="freetext_question_2">\u0020 gegebene Zahl in das\u0020</string>
    <string name="freetext_question_3"> \u0020um.\n</string>
    <string name="answer_prompt">Antwort eingeben!</string>
    <string name="freetext_question_string_1">Rechnen Sie die im\u0020</string>
    <string name="freetext_question_string_2">er-System gegebene Zahl in das\u0020</string>
    <string name="freetext_question_string_3">er-System um:\u0020</string>
    <string name="multiple_choice_question_1">Wählen Sie für die gegebene Zahl im \u0020</string>
    <string name="multiple_choice_question_2">\u0020 die richtige Entsprechung im\u0020 </string>
    <string name="multiple_choice_question_3"> \u0020 aus.\n</string>
    <string name="true_false_question_1">Ist der folgende Ausdruck wahr oder falsch?\n</string>
    <string name="true_button_tag">wahr</string>
    <string name="false_button_tag">falsch</string>
    <string-array name="tutorial_intro" >
        <item>
            <![CDATA[
            Die Zahlensysteme, um die es hier geht, sind Stellenwertsysteme, d.h. es gibt eine bestimmte Anzahl an Ziffern in einem Zahlensystem.
            Abhängig davon an welcher Stelle in einer Zahl diese stehen, haben sie einen unterschiedlichen Wert.
            Je weiter links eine Ziffer steht, desto höher ist dieser Wert.
            Das im Alltag am meisten verwendete Zahlensystem ist das Dezimalsystem, das auf der Basis 10 basiert.<br/>
            Man kann bei der Zahl 387 von der Einerstelle, der Zehnerstelle und der Hunderterstelle sprechen.<br/><br/>
            Die 7 an der Einerstelle hat einen Wert von 7*1 = 7<br/>
            Die 8 an der Zehnerstelle hat einen Wert von 8*10 = 80<br/>
            Die 3 an der Hunderterstelle hat einen Wert von 3*100 = 300<br/><br/>
            Um den Wert der ganzen Zahl zu bekommen muss man die Werte der einzelnen Stellen addieren:<br/>
            7+80+300 = 387
            ]]>
        </item>
        <item><![CDATA[

            In der Informatik gibt es noch weitere relevante Zahlensysteme, die auf das Binärsystem, das Zahlensystem zur Basis 2, zurückgehen.
            Das hat den Grund, dass ein Computer auf der Hardware-Ebene nur zwei Zustände kennt: An/Aus, Geladen/Ungeladen…<br/>
            Im Binärsystem gibt es daher auch nur zwei Ziffern: 0 und 1. Auch das Binärsystem und alle weiteren hier behandelten Zahlensysteme
            sind stellenwertbasierte Systeme, d.h. je weiter links eine Ziffer in einer Zahl steht, desto höher ist ihr Wert.

        ]]></item>
        <item>
        <![CDATA[
            Weitere in der Informatik relevante Zahlensysteme sind das Oktalsystem (zur Basis 8) und das Hexadezimalsystem (zur Basis 16).
            Diese beiden sind leicht in das Binärsystem umzuwandeln und haben analog zum Binärsystem, das 2 verschiedene Ziffern hat,
            8 bzw. 16 unterschiedliche Ziffern.
            ]]>
        </item>
        <item>
        <![CDATA[
            Für Zahlensysteme mit einer höheren Basis als 10 gibt es allerdings keine arabischen Ziffern mehr.
            Deswegen verwendet man dann die Buchstaben des lateinischen Alphabets, angefangen bei A.
            Das Hexadezimalsystem hat somit die Ziffern 0-9 und A-F.
            ]]>
        </item>
        <item>
        <![CDATA[
            Für die verschiedenen Systeme gibt es auch Namen, die oft aus dem Lateinischen oder Griechischen abeleitet sind:<br/><br/>
            Basis 2: Binärsystem<br/>
            Basis 3: Trialsystem<br/>
            Basis 4: Quaternalsystem<br/>
            Basis 5: Pentalsystem<br/>
            Basis 6: Hexalsystem<br/>
            Basis 7: Heptalsystem<br/>
            Basis 8: Oktalsystem<br/>
            Basis 9: Nonalsystem<br/>
            Basis 10: Dezimalsystem<br/>
            Basis 11: Undezimalsystem<br/>
            Basis 12: Duodezimalsystem<br/>
            Basis 13: Tridezimalsystem<br/>
            Basis 14: Quatridezimalsystem<br/>
            Basis 15: Pentadezimalsystem<br/>
            Basis 16: Hexadezimalsystem<br/>
            ]]>
        </item>
        <item>
            Der Anfang ist gemacht. Im nächsten Tutorial geht es um die Umrechnung einer Zahl aus einem beliebigen Zahlensystem ins Dezimalsystem.
        </item>
    </string-array>
</resources>