<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_general_padding"
    >

    <Button
    android:id="@+id/tutorial_intro_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tutorial_intro_button"
    android:gravity="center"/>

    <Button
        android:id="@+id/tutorial_from_decimal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_from_10_button"
        android:gravity="center"/>

    <Button
        android:id="@+id/tutorial_from_other_numeral_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_from_other_button"

        android:gravity="center"/>

    <Button
        android:id="@+id/tutorial_tricks_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_tricks_button"
        android:gravity="center"/>

</LinearLayout>