<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_general_padding">

    <Button
        android:id="@+id/start_tutorial_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/start_tutorial_button"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_general_size"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/my_button"

        />


    <Button
        android:id="@+id/start_practice_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/start_practice_button"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_general_size"
        android:background="@drawable/my_button"
        android:layout_marginBottom="@dimen/margin_bottom"
        />

    <Button
        android:id ="@+id/start_game_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/start_game_button"
        android:textColor="@color/text_white"

        android:textSize="@dimen/text_general_size"
        android:background="@drawable/my_button"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <Button
        android:id="@+id/start_progress_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/start_progress_button"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_general_size"
        android:background="@drawable/my_button"/>

    <TextView
        android:id="@+id/testView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>