<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/activity_general_padding"
    android:layout_height="match_parent"
    android:background="@drawable/octocaat"
    >



    <Button
        android:id="@+id/game_start_button"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_size"

        android:text="@string/game_start"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_general_size"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/mybutton"
        android:layout_gravity="center"

        />


    <Button
        android:id="@+id/game_highscore_button"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_size"
        android:text="@string/game_highscore"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_general_size"
        android:background="@drawable/mybutton"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_gravity="center"
        />

    <Button
        android:id ="@+id/game_help_button"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_size"
        android:text="@string/game_help"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_general_size"
        android:background="@drawable/mybutton"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom"/>




</LinearLayout>