<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black">

    <include
        android:id="@+id/practice_main_toolbar"
        layout="@layout/toolbar"
       />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/practice_main_toolbar">


        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_general_padding"
            android:background="@android:color/black"
            android:layout_gravity="center_horizontal">



    <TextView
        android:id="@+id/choose_numeral_system_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_headline"
        android:textSize="@dimen/exercise_headline_size"
        android:layout_marginTop="@dimen/margin"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/numberpicker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_below="@id/choose_numeral_system_textview">


        <de.mi.ur.NumberPicker.NumeralNumberPicker
            android:id="@+id/firstNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/turquoise"
            android:solidColor="@color/blue_grey"
            android:gravity="center_horizontal"
            android:layout_margin = "@dimen/margin"
            android:descendantFocusability="blocksDescendants"

            min="2"
            max="16"
            default="2"
             />

        <de.mi.ur.NumberPicker.NumeralNumberPicker
            android:id="@+id/secondNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/turquoise"
            android:solidColor="@color/blue_grey"
            android:gravity="center_horizontal"
            android:layout_margin = "@dimen/margin"
            android:descendantFocusability="blocksDescendants"
            min="2"
            max="16"
            default="10"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/exercisetype_choice_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercisetype_choice"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/exercise_headline_size"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_below="@id/numberpicker_layout"/>

    <Button
        android:id="@+id/multiple_choice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below ="@id/exercisetype_choice_textview"
        android:text="@string/multiple_choice_button"
        android:textSize="@dimen/exercise_button_text_size"
        android:textColor="@color/text_white"
        android:background="@drawable/my_button"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <Button
        android:id="@+id/wrong_true_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/multiple_choice_button"
        android:text="@string/wrong_true_button"
        android:textSize="@dimen/exercise_button_text_size"
        android:textColor="@color/text_white"
        android:background="@drawable/my_button"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <Button
        android:id="@+id/manual_entry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wrong_true_button"
        android:text="@string/manual_entry_button"
        android:textSize="@dimen/exercise_button_text_size"
        android:textColor="@color/text_white"
        android:background="@drawable/my_button"
        android:layout_marginBottom="@dimen/margin_bottom"/>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>